<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/beijing"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout style="@style/topbar_layout">

        <ImageButton
            style="@style/topbar_btn_left"
            android:onClick="back"
            android:src="@mipmap/fanhui" />

        <TextView
            style="@style/topbar_title"
            android:text="@string/login" />

    </RelativeLayout>


    <LinearLayout style="@style/register_layout_style">

        <ImageView
            android:id="@+id/login_iv_gesture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/app_icon" />

        <android.support.v4.widget.Space
            android:layout_width="1dp"
            android:layout_height="72dp" />

        <EditText
            android:id="@+id/login_et_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/login_phone_bg"
            android:gravity="center"
            android:hint="@string/please_input_account"
            android:inputType="phone"
            android:maxLength="11"
            android:textColor="@color/cm_white"
            android:textColorHint="@color/cm_white"
            android:textSize="@dimen/tv_size_body2" />

        <android.support.v4.widget.Space
            android:layout_width="1dp"
            android:layout_height="16dp" />

        <EditText
            android:id="@+id/login_et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/login_password_bg"
            android:gravity="center"
            android:hint="@string/please_input_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textColor="@color/cm_white"
            android:textColorHint="@color/cm_white"
            android:textSize="@dimen/tv_size_body2" />

        <android.support.v4.widget.Space
            android:layout_width="1dp"
            android:layout_height="32dp" />

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@mipmap/login_btn" />

        <android.support.v4.widget.Space
            android:layout_width="1dp"
            android:layout_height="56dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/login_tv_register"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:gravity="center"
                android:text="@string/register_account"
                android:textColor="@color/cm_white"
                android:textSize="@dimen/tv_size_body2" />

            <TextView
                android:id="@+id/login_tv_forget"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="@string/forget_password"
                android:textColor="@color/cm_white"
                android:textSize="@dimen/tv_size_body2" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
