<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/beijing"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout style="@style/topbar_layout">

        <ImageButton
            style="@style/topbar_btn_left"
            android:onClick="back"
            android:src="@mipmap/fanhui" />

        <TextView
            style="@style/topbar_title"
            android:text="@string/forget" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout style="@style/register_layout_style">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/app_icon" />

            <android.support.v4.widget.Space
                android:layout_width="1dp"
                android:layout_height="32dp" />

            <EditText
                android:id="@+id/forget_et_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/shouji_bg"
                android:gravity="center"
                android:hint="@string/please_input_account"
                android:inputType="phone"
                android:maxLength="11"
                android:textColor="@color/cm_white"
                android:textColorHint="@color/cm_white"
                android:textSize="@dimen/tv_size_body2" />

            <android.support.v4.widget.Space
                android:layout_width="1dp"
                android:layout_height="16dp" />

            <LinearLayout
                style="@style/register_title_layout"
                android:background="@null">

                <EditText
                    android:id="@+id/forget_et_code"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/register_layout_bg"
                    android:gravity="center_vertical"
                    android:hint="@string/please_input_code"
                    android:inputType="number"
                    android:maxLength="6"
                    android:paddingLeft="28dp"
                    android:paddingRight="28dp"
                    android:textColor="@color/cm_white"
                    android:textColorHint="@color/cm_white"
                    android:textSize="@dimen/tv_size_body2" />

                <TextView
                    android:id="@+id/forget_tv_code"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="32dp"
                    android:background="@mipmap/code_bg"
                    android:gravity="center"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/get_code"
                    android:textColor="@color/cm_white"
                    android:textSize="@dimen/tv_size_body2" />
            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="1dp"
                android:layout_height="16dp" />

            <EditText
                android:id="@+id/forget_et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/password_bg"
                android:gravity="center"
                android:hint="@string/please_input_new_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textColor="@color/cm_white"
                android:textColorHint="@color/cm_white"
                android:textSize="@dimen/tv_size_body2" />

            <android.support.v4.widget.Space
                android:layout_width="1dp"
                android:layout_height="16dp" />

            <EditText
                android:id="@+id/forget_et_confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/confirm_password_bg"
                android:gravity="center"
                android:hint="@string/please_input_confirm_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textColor="@color/cm_white"
                android:textColorHint="@color/cm_white"
                android:textSize="@dimen/tv_size_body2" />

            <android.support.v4.widget.Space
                android:layout_width="1dp"
                android:layout_height="72dp" />

            <Button
                android:id="@+id/forget_btn_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@mipmap/register_btn_now" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
